--- a/css/foundation.css
+++ b/css/foundation.css
@@ -432,7 +432,7 @@ template {
   font-family: "small=0em&medium=40em&large=64em&xlarge=75em&xxlarge=90em"; }
 
 html {
-  box-sizing: border-box; 
+  box-sizing: border-box;
   font-size: 100%; }
 
 *,
@@ -440,13 +440,15 @@ html {
 *::after {
   box-sizing: inherit; }
 
+
+
 body {
   margin: 0;
   padding: 0;
   background-image: url(../img/fondo.jpg);
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center center;
-  background-size: cover;
+  background-size:  auto;
   width: 100%;
   height: 100%;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
